one-dto-mapper-derive/tests/compile_fail/enum_tuple.rs
use one_dto_mapper_derive::From;

enum X {
    Variant1(u32, f32),
}

#[derive(From)]
#[from(Y)]
enum Y {
    Variant1(u32, f32),
}

fn main() {}
